ghost/admin/assets/sass/layouts/editor.scss
/* ... */
.extended-tags { // When the tag bar is exapanded
    position: static;
    #entry-tags {
        &:after {
            right: 10px;
        }
    }
    .tags {
        width: 281px;
    }

    .tag-label, .tag-label.touch {
        color: #fff;
    }

    .tag-input {
        width: 100%;
        margin-top: 5px;
        padding-top: 5px;
        padding-left: 10px;
        border-top: 1px solid $darkgrey;

    }
    .right {
        display: none;
    }
}

#entry-tags {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    text-transform: none;
    padding: 10px 0 0 0;

    &:after, &:before {
        content: "";
        position: fixed;
        top: 10px;
        right: 270px;
        width: 20px;
        height: 26px;
        @include linear-gradient(left, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
        z-index: 9999;

        @include breakpoint($mobile) {
            right: 128px;
        }
    }

    &:before {
        right: auto;
        left: 29px;
        @include linear-gradient(right, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
    }
}

.tags {
    @include box-sizing(border-box);
    position: relative;
    display: inline-block;
    vertical-align: middle;
    width: auto;
    max-width: 80%;
    max-width: calc(100% - 300px);
    height: 26px;
    padding-left: 20px;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
    @include transition(width 0.2s linear);

    @include breakpoint($mobile) {
        display: block;
        width: 166px;
        max-width: inherit;
    }
}

.tag-label {
    display: block;
    float: left;
    @include icon($i-tag);
    padding: 1px 8px 0 8px;
    @include transition;

    &:hover {
        cursor: pointer;
        color: $lightgrey;
    }

    &.touch {
        color: inherit;
    }
}

.tag-input {
    display: inline-block;
    vertical-align: top;
    color: $lightgrey;
    font-weight: 300;
    background: transparent;
    border: none;

    &:focus {outline: none;}
}

.tag {
    @include icon-after($i-x, 8px, $darkgrey) {
        margin-left: 4px;
        vertical-align: 5%;
        text-shadow: rgba(255,255,255,0.15) 0 1px 0;
        @include transition;
    }
    display: inline;
    margin-right: 5px;
    padding: 0 5px;
    color: $lightgrey;
    white-space: nowrap;
    background: lighten($grey, 15%);
    border-radius: $rounded;
    box-shadow: 
        rgba(255,255,255,0.2) 0 1px 0 inset,
        #000 0 1px 3px;

    @include user-select(none);

    &:hover {
        cursor: pointer;
        @include icon-after($i-x, 8px, $lightgrey) {text-shadow: none;}

    }

}

.suggestions {
  @extend %menu;
  bottom: 100%;

  li.selected{
    background: $blue;
    box-shadow: 
        rgba(255,255,255,0.2) 0 1px 0 inset,
        rgba(0,0,0,0.5) 0 1px 5px;
  }

  li a {
      padding-left: 25px;
  }

  mark{
    background: none;
    color: white;
    font-weight: bold;
  }

}

#entry-controls {
    @include box-sizing(border-box);
    display: inline-block;
    position: relative;
    padding: 0;
    z-index: 1;
}

.entry-settings {
    @include icon($i-settings, 1.1em){vertical-align: 0;};
    @include box-sizing(border-box);
    display: inline-block;
    padding: 0 10px;
    line-height: 1.8em;
    color: $midgrey;
    @include transition;

    &:hover {
        color: $lightgrey;
    }
}

.entry-settings-menu {
    position: absolute;
    bottom: 40px;
    right: -5px;
}

#entry-actions {
    margin-right: 6px;
    position: relative;
}

#entry-actions-menu {
    position: absolute;
    bottom: 50px;
    right: -5px;
}

/* =============================================================================
   Markdown Help Modal
   ============================================================================= */

.modal-markdown-help-table {
    margin-top: 0;
}

/* =============================================================================
   CodeMirror
   ============================================================================= */

.CodeMirror {
    /* Set height, width, borders, and global font properties here */
    font-family: monospace;
    height: 300px;
}

.CodeMirror-scroll {
    /* Set scrolling behaviour here */
    overflow: auto;
}

/* PADDING */

.CodeMirror-lines {
    padding: 4px 0; /* Vertical padding around content */
}

.CodeMirror pre {
    padding: 0 4px; /* Horizontal padding of content */
}

.CodeMirror-scrollbar-filler {
    background-color: white; /* The little square between H and V scrollbars */
}

/* GUTTER */

.CodeMirror-gutters {
    border-right: 1px solid #ddd;
    background-color: #f7f7f7;
}

/* CURSOR */

.CodeMirror div.CodeMirror-cursor {
    border-left: 1px solid black;
    z-index: 3;
}
/* Shown when moving in bi-directional text */
.CodeMirror div.CodeMirror-secondarycursor {
    border-left: 1px solid silver;
}


.cm-tab { display: inline-block; }

/* DEFAULT THEME */

.cm-s-default .cm-keyword {color: #708;}
.cm-s-default .cm-atom {color: #219;}
.cm-s-default .cm-number {color: #164;}
.cm-s-default .cm-def {color: #00f;}
.cm-s-default .cm-variable {color: black;}
.cm-s-default .cm-variable-2 {color: #05a;}
.cm-s-default .cm-variable-3 {color: #085;}
.cm-s-default .cm-property {color: black;}
.cm-s-default .cm-operator {color: black;}
.cm-s-default .cm-comment {color: #a50;}
.cm-s-default .cm-string {color: #a11;}
.cm-s-default .cm-string-2 {color: #f50;}
.cm-s-default .cm-meta {color: #555;}
.cm-s-default .cm-error {color: #f00;}
.cm-s-default .cm-qualifier {color: #555;}
.cm-s-default .cm-builtin {color: #30a;}
.cm-s-default .cm-bracket {color: #997;}
.cm-s-default .cm-tag {color: #170;}
.cm-s-default .cm-attribute {color: #00c;}
.cm-s-default .cm-header {color: blue;}
.cm-s-default .cm-quote {color: #090;}
.cm-s-default .cm-hr {color: #999;}
.cm-s-default .cm-link {color: #00c;}

.cm-negative {color: #d44;}
.cm-positive {color: #292;}
.cm-header, .cm-strong {font-weight: bold;}
.cm-em {font-style: italic;}
/* ... */

